--- a/ToDoList/Views/Items/CreateForm.cshtml
+++ b/ToDoList/Views/Items/CreateForm.cshtml
@@ -1,7 +1,8 @@
-<h1>Add a new item to @Model.GetName()</h1>
-<form action='/items' method='post'>
-  <input id='category-id' name='category-id' type='hidden' value='@Model.GetId()'>
-  <label for='item-description'>Item description</label>
-  <input id='item-description' name='item-description' type='text'>
-  <button type='submit'>Add item</button>
+<h1>Add a new item</h1>
+<form action="/items" method="post">
+  <label for="item-description">Item description:</label>
+  <input id="item-description" name="item-description" type="text">
+  <button type="submit">Add new item</button>
 </form>
+<p><a href="/">Back home</a></p>
+<p><a href="/items">View all items</a></p>
