--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -1,7 +1,14 @@
 <h1>To Do List</h1>
-<h3><a href='/categories'>View categories</a></h3>
-<h3><a href='/categories/new'>Add a new category</a></h3>
-@foreach (var item in Model)
-        {
-            <h4>@item.GetDescription() | <a href="/items/@item.GetId()/update">Edit</a></h4>
-        }
+<hr />
+<h2>Items:</h2>
+@if (Model.Count != 0)
+{
+  <ul>
+    @foreach (var item in Model)
+    {
+      <li><a href='/items/@item.GetId()'>@item.GetDescription()</a></li>
+    }
+  </ul>
+}
+<h4><a href="/items/new">Add new item</a></h4>
+<h4><a href="/">Return home</a></h4>
